# osrm-bindings

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: gh-pages.yml  publish_wheels.yml  pull_request.yml  push_master.yml
cmake/: apply_patch.cmake
docs/: mkdocs.yml
docs/docs/pages/: development.md
include/: engineconfig_nb.h
include/parameters/: baseparameter_nb.h  matchparameter_nb.h  nearestparameter_nb.h  routeparameter_nb.h  tableparameter_nb.h  tileparameter_nb.h  tripparameter_nb.h
include/types/: approach_nb.h  bearing_nb.h  coordinate_nb.h  jsoncontainer_nb.h  optional_nb.h
include/utility/: osrm_utility.h  param_utility.h
pages/base/: index.html
pages/development/: index.html
pages/match/: index.html
pages/nearest/: index.html
pages/osrm/: index.html
pages/route/: index.html
pages/table/: index.html
pages/tile/: index.html
pages/trip/: index.html
patches/: conan-source-dir.patch  conan-static-deps.patch  sol2-lua-compat-bitlib.patch
search/: search_index.json
src/: engineconfig_nb.cpp  osrm_nb.cpp
src/osrm/: __main__.py  osrm_ext.pyi
src/parameters/: baseparameter_nb.cpp  matchparameter_nb.cpp  nearestparameter_nb.cpp  routeparameter_nb.cpp  tableparameter_nb.cpp  tileparameter_nb.cpp  tripparameter_nb.cpp
src/types/: approach_nb.cpp  bearing_nb.cpp  coordinate_nb.cpp  jsoncontainer_nb.cpp  optional_nb.cpp
src/utility/: osrm_utility.cpp  param_utility.cpp
tests/: conftest.py  constants.py  test_index.py  test_match.py  test_nearest.py  test_route.py  test_table.py  test_tile.py  test_trip.py
tests/data/: Makefile  windows-build-tests.bat
