[build-system]
requires = ["scikit-build-core >=0.11.0", "nanobind >=2.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "osrm-bindings"
version = "0.0.1"
description = "Python bindings for the osrm-backend project"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff"]

[project.urls]
repository = "https://github.com/nilsnolde/py-osrm"
"osrm-backend repository" = "https://github.com/Project-OSRM/osrm-backend"

[tool.ruff]
exclude = [".venv", "build"]
extend-exclude = [
    "dist",
    "wheelhouse",
    "*build*",
    "*.egg-info",
]
line-length = 105
lint.ignore = ["E731", "F811", "E741"]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/osrm", "src/bin"]

[tool.scikit-build.cmake.define]
OSRM_GIT_TAG = "master"
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
archs = ["native"]
build = "cp312-*"
build-verbosity = 1
skip = "*musllinux*"
manylinux-x86_64-image = "ghcr.io/nilsnolde/manylinux:2_28_osrm_python"
test-requires = "pytest"
test-command = [
  "cd {project}/tests/data",
  "make",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]

[tool.cibuildwheel.linux]
environment = "LD_LIBRARY_PATH=/usr/local/lib64:${LD_LIBRARY_PATH}"
before-build = "ccache -s && ccache -M 500M"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=15 CCACHE_DIR=/tmp/ccache"
before-build = "ccache -s && ccache -M 500M"
before-all = """
  export HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALL_CLEANUP=1
  brew install lua tbb boost@1.90 ccache
  brew link boost@1.90
"""

[tool.cibuildwheel.windows]
before-build = "pip install conan==2.27.0 && conan profile detect --force"
config-settings = "cmake.define.ENABLE_CONAN=ON"
test-command = [
  "cd /d {project}/tests/data",
  "windows-build-tests.bat",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]
