[build-system]
requires = [
  "scikit-build-core >=0.12.0",
  "nanobind >=2.12.0",
  "setuptools-scm >=10",
  "cmake",
  "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "osrm-py"
dynamic = ["version"]
description = "Python bindings for the osrm-backend project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff"]

[project.urls]
repository = "https://github.com/nilsnolde/osrm-py"
"osrm-backend repository" = "https://github.com/Project-OSRM/osrm-backend"

[tool.ruff]
exclude = [".venv", "build"]
extend-exclude = [
    "dist",
    "wheelhouse",
    "*build*",
    "*.egg-info",
]
line-length = 105
lint.ignore = ["E731", "F811", "E741"]

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
wheel.py-api = "cp312"
wheel.packages = ["src/osrm", "src/bin"]
sdist.include = ["pyproject.toml"]
sdist.exclude = ["tests", "dist", "wheelhouse"]

[tool.scikit-build.cmake.define]
OSRM_GIT_REPO = "https://github.com/nilsnolde/osrm-backend"
OSRM_GIT_TAG = "de8a9da93aa09a4943d3964f0fb378a01a66af49"
CMAKE_BUILD_TYPE = "Release"
CMAKE_CXX_SCAN_FOR_MODULES = "OFF"

[tool.cibuildwheel]
archs = ["native"]
build = "cp312-*"
build-verbosity = 1
skip = "*musllinux*"
manylinux-x86_64-image = "ghcr.io/nilsnolde/manylinux:2_28_osrm_python"
test-requires = "pytest"
test-command = [
  "cd {project}/tests/data",
  "make",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]

[tool.cibuildwheel.linux]
environment = "LD_LIBRARY_PATH=/usr/local/lib64:${LD_LIBRARY_PATH}"
before-build = "ccache -s && ccache -M 500M"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=15 CCACHE_DIR=/tmp/ccache"
before-build = "ccache -s && ccache -M 500M"
before-all = """
  export HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALL_CLEANUP=1
  brew install lua tbb boost@1.90 ccache
  brew link boost@1.90
"""

[tool.cibuildwheel.windows]
before-build = "echo CMAKE_CXX_COMPILER_LAUNCHER=%CMAKE_CXX_COMPILER_LAUNCHER% && echo SCCACHE_DIR=%SCCACHE_DIR% && where sccache && pip install conan==2.27.0 delvewheel sccache && conan profile detect --force && sccache --show-stats"
config-settings = "cmake.define.ENABLE_CONAN=ON cmake.define.CMAKE_CXX_COMPILER_LAUNCHER=sccache cmake.define.CMAKE_C_COMPILER_LAUNCHER=sccache cmake.args=-GNinja"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
test-command = [
  "cd /d {project}/tests/data",
  "windows-build-tests.bat",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]
